array.island.Island.scala.error
Compilation error:
Island:18: error: not found: value in
        for (j in range <- i to k-1) {
               ^Island:18: error: not found: value in
        for (j in range <- i to k-1) {
               ^